# ai_gateway

./: .dockerignore  Dockerfile  buildspec.yaml  pyproject.toml  requirements.txt
src/: main.py
src/configs/: base.py
src/service/test/: controller.py
src/service/translate/: controller.py  tasks.py
src/tasks/: translate.py
src/utils/: celery.py  websocket.py
